stream support and mobile fixes, share button added on mobile

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -710,7 +710,29 @@ emoji-picker {
   padding-bottom: 9px !important;
 }
 
+.minicard-container .thumb {
+  width: 100px;
+  height: 100px;
+  position: relative;
 
+}
+
+.minicard-container .thumb img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+}
+
+.minicard-container .updates {
+  max-height: 2ch !important;
+  overflow: hidden;
+}
 
 /* CALENDAR CONTAINER */
 .locked .labelcolor {
@@ -989,4 +1011,30 @@ li[data-checked="false"]::before {
 .create-usergroup-popup emoji-picker {
   max-height: 150px;
   top: 100%;
+}
+
+@media (max-width:991px) {
+  .thumb {
+    width: 100px;
+    height: 100px;
+    position: relative;
+
+  }
+
+  .thumb img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+  }
+
+  .updates {
+    max-height: 2ch !important;
+    overflow: hidden;
+  }
 }
